--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 /* This css changes the html format for the home page html. */
 body
 {
-	font-family: "Georgia", "Arial Narrow";
+	font-family: "Comic Sans MS", "Arial Narrow";
 	text-align: justify;
 	background-color: lightyellow;
 }
