--- a/HowtoplayPokemonMasters.css
+++ b/HowtoplayPokemonMasters.css
@@ -1,7 +1,7 @@
 /* This css changes the format for how do you play Pokemon Masters html. */
 body
 {
-	font-family: "Georgia", "Arial Narrow";
+	font-family: "Comic Sans MS", "Arial Narrow";
 	text-align: justify;
 	background-color: lightyellow;
 }
