--- a/CharacterInfoGithub.css
+++ b/CharacterInfoGithub.css
@@ -1,7 +1,7 @@
 /* This css changes the html format for Character Info html. */
 body
 {
-	font-family: "Georgia", "Arial Narrow";
+	font-family: "Comic Sans MS", "Arial Narrow";
 	text-align: justify;
 	background-color: lightyellow;
 }
